# dolmen_skolemize

./: .gitignore  Makefile  README.md  dolmen_skolemize.opam  dune-project
lib/: dune
test/: CSR038+1.p  HAL004+1.p  SYN075+1.p  barber.p  barber_dolmen.p  dune  grade.p  new_example.p  problems.p  problems_dolmen.p  reflexif.p  reflexif_dolmen.p  test_dolmen_skolemize.ml
test/Axioms/: HAL001+0.ax
